# python-fastapi-experiment

./: .python-version  Dockerfile  README.md  pyproject.toml  pytest.ini  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json
routers/: info.py  items.py
src/: main.py
src/routers/: task.py
tests/: info_test.py
