[project]
name = "src"
version = "1.0.0"
requires-python = ">= 3.12"
dependencies = [
    "redis>=5.0.8",
    "types-redis>=4.6.0.20240806",
    "httpx>=0.27.0",
    "fastapi[standard]>=0.112.0",
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.dev-dependencies]
dev = [
    "pytest>=8.3.2",
    "ruff>=0.5.7",
]

[tool.pdm.scripts]
dev = "fastapi dev src/main.py"
start = "python -m src.main"
test = "pytest"
lint = "ruff check"
